Update pom, little refactor code